logs/Slang/generated/hdlconv/hdlconvertor_p726.sv.log
name: hdlconvertor_p726
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p726.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p726.sv:18:1: error: use of undeclared identifier 'f2'
f2.x = 1;
^~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p726.sv:22:1: error: unknown module 'some_module'
some_module s2();
^~~~~~~~~~~
